<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">Material Design App,is an app designed by Javier Segovia Córdoba</string>
    <string name="accept">Accept</string>
    <string name="action_about">Aplikasi</string>
    <string name="action_exit">Keluar</string>
    <string name="action_help">Bantuan</string>
    <string name="action_settings">Tampilan</string>
    <string name="add_account">Add account</string>
    <string name="additionalMarker">Pilih Marka</string>
    <string name="adhan">Adhan</string>
    <string name="aggressive">Aggressive</string>
    <string name="app_name">Ayo Ke Masjid</string>
    <string name="asr">`Asr</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="bearing_north">1) Bearing North = (1)°</string>
    <string name="bearing_qibla">2) Bearing Qiblat = (1) (+/-) (2)° = (3)°</string>
    <string name="beep">Beep</string>
    <string name="calculation">Get User Location</string>
    <string name="cari_masjid">Kriteria</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="compass_disclaimer">Compass works from Al-Muazzin-Master</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="degree_minute_second"><g id="degree">%1$d</g>° <g id="minute">%2$d</g>’ <g id="second">%3$s</g>”</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="drawer_close">close drawer</string>
    <string name="drawer_header_image">drawer header image</string>
    <string name="drawer_open">open drawer</string>
    <string name="egypt_survey">Egyptian General Authority of Survey</string>
    <string name="email" />
    <string name="fajr">Fajr</string>
    <string name="fixed_ishaa">"Fixed `Ishaa' Interval (always 90)"</string>
    <string name="github">GitHub: github.com/dahnark</string>
    <string name="google_maps_key">AIzaSyDEzgioLWP_O7_kUu3LykK-oaKVu0efWdU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Masukan</string>
    <string name="ishaa">"`Ishaa'"</string>
    <string name="karachi_hanaf">Hanafi - Karachi University of Islamic Sciences</string>
    <string name="karachi_shaf">Shaf`i - Karachi University of Islamic Sciences</string>
    <string name="latitude">Latitude (Lintang)</string>
    <string name="longitude">Longitude (Bujur)</string>
    <string name="lookup_gps">Lookup GPS</string>
    <string name="maghrib">Maghrib</string>
    <string name="manage_account">Manage Accounts</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="muslim_league">Muslim World League</string>
    <string name="name" />
    <string name="next_fajr">Next Fajr</string>
    <string name="none">None</string>
    <string name="normal">Normal</string>
    <string name="north_america">Islamic Society of North America</string>
    <string name="qibla">Qiblat</string>
    <string name="qibla2">360 - Qiblat</string>
    <string name="reset">Cancel</string>
    <string name="save">Save</string>
    <string name="sdefault">Default</string>
    <string name="special">Special</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="sunrise">Sunrise</string>
    <string name="txt_line_qiblat">Qiblat</string>
    <string name="umm_alqurra">Umm Al-Qurra, Saudi Arabia</string>
    <string name="website">desarrollador-android.com</string>
</resources>
