<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="-1" android:layout_height="-1">
    <TableLayout android:padding="5dp" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="50dp" android:stretchColumns="*">
        <TableRow>
            <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_width="-2" android:layout_height="-2" android:text="@string/latitude" />
            <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/current_latitude" android:layout_width="-2" android:layout_height="-2" />
        </TableRow>
        <TableRow>
            <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_width="-2" android:layout_height="-2" android:text="@string/longitude" />
            <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/current_longitude" android:layout_width="-2" android:layout_height="-2" />
        </TableRow>
        <TableRow>
            <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_width="-2" android:layout_height="-2" android:text="@string/qibla" />
            <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/current_qibla" android:layout_width="-2" android:layout_height="-2" />
        </TableRow>
        <TableRow>
            <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_width="-2" android:layout_height="-2" android:text="@string/qibla2" />
            <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@id/current_qibla2" android:layout_width="-2" android:layout_height="-2" />
        </TableRow>
    </TableLayout>
    <LinearLayout android:layout_gravity="11" android:orientation="0" android:paddingTop="60dp" android:paddingBottom="5dp" android:layout_width="-2" android:layout_height="-2">
        <org.bpmikc.akm.View.QiblaCompassView android:layout_gravity="77" android:id="@id/qibla_compass" android:layout_width="-2" android:layout_height="-2" />
    </LinearLayout>
    <LinearLayout android:orientation="1" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="30dp" android:layout_marginTop="420dp">
        <TextView android:id="@id/bearing_north" android:paddingLeft="2dp" android:layout_width="-2" android:layout_height="-2" />
        <TextView android:id="@id/bearing_qibla" android:paddingLeft="2dp" android:layout_width="-2" android:layout_height="-2" />
        <TextView android:paddingTop="3dp" android:layout_width="-2" android:layout_height="-2" android:text="@string/compass_disclaimer" style="@style/finePrint" />
    </LinearLayout>
    <LinearLayout android:layout_width="-1" android:layout_height="-2" android:weightSum="3.0" android:layout_alignParentTop="true">
        <Button android:id="@id/btnLokasiAnda" android:layout_width="-1" android:layout_height="-2" android:text="Lokasi" android:layout_weight="1.0" />
        <Button android:id="@id/btnRefreshCompass" android:layout_width="-1" android:layout_height="-2" android:text="Refresh" android:layout_weight="1.0" />
        <Button android:id="@id/btnShowMap" android:layout_width="-1" android:layout_height="-2" android:text="Map" android:layout_weight="1.0" />
    </LinearLayout>
</FrameLayout>
